# pytrade

./: pyproject.toml
.github/workflows/: ci.yml
pytrade/: __init__.py
pytrade/cli/: cli.py  dataset.py  facts.py  net.py  portfolio.py  signal.py  textual.py
pytrade/consts/: deribit.py  xbrl.py
pytrade/data/: datasets.py  sec.py
pytrade/model/: linear.py  portfolio.py  signal.py
pytrade/neptune/: portfolio.py  signal.py
pytrade/risk/: realized.py
pytrade/risk/models/: analysis.py
pytrade/risk/models/factor/: returns.py
pytrade/stats/: lm.py
pytrade/utils/: pandas.py  plotting.py  ray.py
tests/unit/data/: test_datasets.py
